Fix dark mode primary progress color

--- a/src-ui/src/theme_dark.scss
+++ b/src-ui/src/theme_dark.scss
@@ -362,6 +362,10 @@ $border-color-dark-mode: #47494f;
     border-color: darken($bg-light-dark-mode, 10%);
     color: $text-color-dark-mode-accent;
   }
+
+  .progress-bar.bg-primary {
+    background-color: darken($primary-dark-mode, 5%) !important;
+  }
 }
 
 body.color-scheme-dark {
